# vibe-kanban

./: Cargo.toml  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
crates/embedded-ssh/: Cargo.toml
crates/embedded-ssh/src/: config.rs  handler.rs  sftp.rs
crates/embedded-ssh/tests/: ssh_smoke.rs
crates/executors/src/: stdout_dup.rs
crates/executors/src/actions/: script.rs
crates/git/src/: cli.rs
crates/local-deployment/: Cargo.toml
crates/remote/src/routes/: github_app.rs
crates/server/src/: main.rs
crates/utils/src/: jwt.rs  shell.rs
npx-cli/: package-lock.json  package.json
